--- a/Flask_template/templates/graphs.html
+++ b/Flask_template/templates/graphs.html
@@ -43,11 +43,13 @@
         <div class="col-md-6">
             <legend class='border-bottom h6'>{{name}} angles for right and left {{body}}</legend>
             <canvas id="myChart" max-width="300" max-height="300"></canvas>
+            <canvas id="myChart2" max-width="300" max-height="300"></canvas>
+
         </div>
         <div class="col-md-6">
             <legend class='border-bottom h6'>Your angles for right and left {{body}}</legend>
-            <canvas id="myChart2" max-width="300" max-height="300"></canvas>
-            <canvas id="myChart3" max-width="300" max-height="300"></canvas>
+            <canvas id="myChart4" max-width="300" max-height="300"></canvas>
+            <canvas id="myChart5" max-width="300" max-height="300"></canvas>
         </div>
     </div>
     <div class='row mt-4'>
@@ -122,11 +124,52 @@ var myChart = new Chart(ctx, {
         }
     }
 });
+
+// Plotting graphs Professional arms
+var ctx = document.getElementById('myChart2').getContext('2d');
+var myChart = new Chart(ctx, {
+    type: 'line',
+    data: {
+                
+        labels: {{label_arm|tojson}},
+        datasets: [{
+            label: 'Right arm',
+            data: {{data_r_arm|tojson}},
+            backgroundColor: [
+                'rgba(255, 99, 0, 0.2)',
+            ],
+            borderColor: [
+                'rgba(255, 99, 0, 1)',
+            ],
+            borderWidth: 1, 
+            fill: true,
+        }, {
+            label: 'Left arm',
+            data: {{data_l_arm|tojson}},
+            backgroundColor: [
+                'rgba(0, 200, 0, 0.2)',
+            ],
+            borderColor: [
+                'rgba(0, 200, 0, 1)',
+            ],
+            borderWidth: 1, 
+            fill: true,
+        }
+        ]
+    },
+    options: {
+        scales: {
+            y: {
+                beginAtZero: true
+            }
+        }
+    }
+});
 </script>
 
 <script>
 // Plotting graphs User legs
-var ctx = document.getElementById('myChart2').getContext('2d');
+var ctx = document.getElementById('myChart4').getContext('2d');
 var myChart = new Chart(ctx, {
     type: 'line',
     data: {
@@ -167,7 +210,7 @@ var myChart = new Chart(ctx, {
 });
 
 // Plotting graphs User arms
-var ctx = document.getElementById('myChart3').getContext('2d');
+var ctx = document.getElementById('myChart5').getContext('2d');
 var myChart = new Chart(ctx, {
     type: 'line',
     data: {
